# tt-server

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/domain/: bot.rs  call.rs  chat.rs  media.rs  message.rs  misc.rs  mod.rs  payment.rs  setting.rs  statistics.rs  user.rs
api/src/handler/: auth.rs  mod.rs  user.rs
api/src/service/: user.rs
config/: Cargo.toml
config/src/: contants.rs  lib.rs
core/: Cargo.toml
entity/: Cargo.toml  README.md
entity/src/entities/: chat.rs  message.rs  mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230422_024420_create_user.rs  m20230422_041821_create_chat.rs  m20230422_044814_create_message.rs
