[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.66"
migration = { path = "../migration" }
entity = { path = "../entity" }
config = {path = "../config"}
axum-sessions = "0.4.1"
async-redis-session = "0.2.2"
tracing = "0.1.37"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tower = "0.4"
tower-http = { version = "0.4.0", features = ["map-request-body", "util"] }
chrono = "0.4.23"

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
